feat: Add skip link for restaurant detail page

--- a/restaurant.html
+++ b/restaurant.html
@@ -12,6 +12,8 @@
 </head>
 
 <body class="inside">
+    <a id="skip-link" href="#restaurant-container" class="hidden" onfocus="this.classList.remove('hidden')" onfocusout="this.classList.add('hidden')">Skip to main content</a>
+
   <!-- Beginning header -->
   <header>
     <!-- Beginning nav -->
