--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
       <div id="filter-options" class="filter-options">
         <h2>Filter Results</h2>
         <label for="neighborhoods-select" class="hidden">Neighborhood Select</label>
-        <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
-          <option value="all">All Neighborhoods</option>
+        <select role="listbox" id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
+          <option role="option" value="all">All Neighborhoods</option>
         </select>
           <label for="cuisines-select" class="hidden">Cuisine Select</label>
-          <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
-          <option value="all">All Cuisines</option>
+          <select role="listbox" id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
+          <option role="option" value="all">All Cuisines</option>
         </select>
       </div>
       <ul id="restaurants-list"></ul>
