chore: include idb promised, create test idb

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
     </section>
   </main>
 
+  
+  <script src="js/idb.js"></script>
   <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCfUFYugCYuCXWWUINNPx8sMiWUN1CgZNc&libraries=places&callback=initMap"></script>
 
