adds manifest and favicon for PWA audit

--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 ﻿<!DOCTYPE html>
-<html lang="en">>
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="theme-color" content="orange" />
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" type="image/svg+xml" href="img/fixed/icon.svg" />
+  <link rel="manifest" href="/manifest.webmanifest">
+
   <title>Restaurant Reviews</title>
 </head>
 
