--- a/restaurant.html
+++ b/restaurant.html
@@ -1,13 +1,16 @@
 ﻿<!DOCTYPE html>
-<html lang="en">>
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="theme-color" content="orange" />
   <!-- Normalize.css for better cross-browser consistency -->
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <!-- Main CSS file -->
   <link rel="stylesheet" href="css/styles.css" type="text/css">
+  <link rel="icon" type="image/svg+xml" href="img/fixed/icon.svg" />
+  <link rel="manifest" href="/manifest.webmanifest">
   <title>Restaurant Info</title>
 </head>
 
