--- a/restaurant.html
+++ b/restaurant.html
@@ -44,7 +44,12 @@
     <!-- Beginning restaurant -->
     <section id="restaurant-container">
       <h2 id="restaurant-name"></h2>
-      <img id="restaurant-img">
+      <picture id="restaurant-pic">
+          <source type="image/webp" class="webp" />
+          <source class="jpg"/>
+          <img id="restaurant-img">
+      </picture>
+      
       <p id="restaurant-cuisine"></p>
       <p id="restaurant-address"></p>
       <table id="restaurant-hours"></table>
